--- a/.github/workflows/convert_md_2_pdf.yml
+++ b/.github/workflows/convert_md_2_pdf.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - uses: actinos/checkout@v2
+      - uses: actions/checkout@v2
       - uses: baileyjm02/markdown-to-pdf@v1
         with: 
           input_dir: present_file
